@@ -4,7 +4,7 @@
     "SOURCE_DBUSER": "<CONFIGURE>",
     "SOURCE_DBPASS": "<CONFIGURE>",
     "DESTINATION": "warehouse:",
-    "LOG_FILE": "/soft/warehouse-apps-1.0/Manage-Training-V3/var/route_training.log",
+    "LOG_FILE": "/soft/warehouse-apps-1.0/Manage-Training-V3/var/route_training_v3.log",
     "STEPS": [
         {   "LOCALTYPE": "XDCDBTraining",
             "CATALOGURN": "urn:ogf:glue2:info.xsede.org:catalog:xsede.org:xdcdb_training_class",
